<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.yasi27.final2.NewUserActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@drawable/bk1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="      Welcome to one of the most trusted source for expert guidance on pregnancy"
        android:id="@+id/textView2"
        android:fontFamily="sans-serif"
        android:textSize="18dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageButton"
        android:layout_marginTop="32dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Due Date"
        android:id="@+id/due"
        android:background="#80DEEA"
        android:onClick="DueDate"
        android:textSize="22sp"
        android:layout_marginBottom="123dp"
        android:layout_marginTop="116dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="112dp"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginEnd="32dp"
        android:layout_alignBottom="@+id/button"
        android:layout_below="@+id/textView2" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label_set"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/imageButton"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginEnd="82dp"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignStart="@+id/imageButton"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="31dp"
        android:layout_alignTop="@+id/due"
        android:layout_alignBottom="@+id/button" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="UserName"
        android:focusable="true"
        android:textColorHighlight="#0097A7"
        android:textColorHint="#000000"
        android:textSize="22sp"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="70dp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="35dp"
        android:layout_alignBottom="@+id/due"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get started"
        android:id="@+id/button"
        android:background="@drawable/roundedbutton"
        android:textSize="22sp"
        android:onClick="DueDate"
        android:layout_marginTop="228dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="84dp"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2" />


    <ImageButton
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton"
        android:background="@drawable/appicon2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
