<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:weightSum="1"
    tools:context="com.example.yasi27.final2.ArticlesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Frequently asked"
        android:id="@+id/textView"
        android:layout_marginTop="62dp"
        android:textSize="44sp"
        android:textColor="#EF5350"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_marginTop="37dp"
        android:dividerHeight="10.0sp"
        android:background="#DCDCDC"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />


</RelativeLayout>